# ChangeLog for media-libs/elementary
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/elementary/ChangeLog,v 1.29 2015/04/19 09:55:39 ago Exp $

  19 Apr 2015; Agostino Sarubbo <ago@gentoo.org> elementary-1.12.2.ebuild:
  Stable for x86, wrt bug #538722

  03 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> elementary-1.12.2.ebuild:
  amd64 stable wrt bug #538722

  03 Apr 2015; Markus Meier <maekke@gentoo.org> elementary-1.12.2.ebuild:
  arm stable, bug #538722

*elementary-9999 (17 Mar 2015)
*elementary-1.13.1 (17 Mar 2015)

  17 Mar 2015; Mike Frysinger <vapier@gentoo.org> +elementary-1.13.1.ebuild,
  +elementary-9999.ebuild:
  Version bump #537920 by José Romildo Malaquias. Import live git ebuild from
  overlay.

*elementary-1.12.2 (31 Dec 2014)

  31 Dec 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +elementary-1.12.2.ebuild:
  Version bump, bug 529312, add required usedep for fbcon, bug 508028

  31 Dec 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  elementary-1.11.2.ebuild:
  Make required version more strict, also new versions of efl break elementary

*elementary-1.11.2 (07 Oct 2014)

  07 Oct 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +elementary-1.11.2.ebuild:
  Version bump

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> elementary-1.10.1.ebuild,
  elementary-1.8.4.ebuild, elementary-1.8.5.ebuild, elementary-1.9.4.ebuild,
  elementary-1.9.5.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  08 Aug 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  elementary-1.9.5.ebuild:
  Update required efl version, bug 515570

*elementary-1.10.1 (29 Jun 2014)

  29 Jun 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +elementary-1.10.1.ebuild:
  Version bump

*elementary-1.9.5 (09 Jun 2014)

  09 Jun 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +elementary-1.9.5.ebuild, -elementary-1.9.3.ebuild:
  Version bump, drop old

*elementary-1.9.4 (01 Jun 2014)
