@@ -1,39 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST elementary-1.10.1.tar.bz2 12169180 SHA256 e8bab96242ddb284878dd6eb4a30dc7e9f6951a3123bbace2e00da4d85ec161a SHA512 58f53fbfd7f93fa6c18d48da8ffdd00e3387bdfb2e508d7d5f30bfa6fff81584bb3807b71283ffd577aca79d5cf2ade8abe3a0b989ce55245a1dfcb25c68b814 WHIRLPOOL fab0e65f4a9a80db34a50704b92623a856e094cb2870c6d83a40cc128c48773488fb4569990e77b3233efc1de368258444f7c0324eed69aadc0ae52d88651967
-DIST elementary-1.11.2.tar.bz2 16714625 SHA256 00229c373d0fafcb3d7239d154be90bafff9525383ef97c7c743dd130dd4f326 SHA512 76c1be80a90a560bbc6e6b335a20ce2f773648b43e56aa646f9e9bf855b805f3dad8f9d3539a00c2253eb22fcb9f638ebdb1a078bd0f21f4dbda8227bd6dff5b WHIRLPOOL c6069c3a36565aaa755032c975f0a2e7ba38b03b2578b77059e363d3366dde08e3fcb2081f6c171d3e74243d64747481a701892a2344879d97d637498958264f
 DIST elementary-1.12.2.tar.bz2 16726431 SHA256 c6aa5e83224400babdd2a6ed848eeb09aa9bed2e1f573619d4d8c0dbf29fcd12 SHA512 05c9fb012bd933fe52978d0bdec7d80be06a54531d6c026de0cd32c7ba218c2c9960ed6c5f5aa94360c88a4465dbd3b8df7d92e73bc6bb754493b44825858232 WHIRLPOOL 97666a5072e280a613f21b3c32566b6a47a0d5a46fbe4983ec3e40c35bba6bd1f5d8f4d09557023494a9eaa89dc14711b8cc007d81e4c19881601955c1acf3df
 DIST elementary-1.13.1.tar.xz 16120080 SHA256 11595b6c5f511150a26e970bf8e590f96a6ce9e33e5dd8419407013844b2b74f SHA512 b8d4e3ff2447a80a98119753012e6ef0666ca569e4d401e66477a51667b6e940eb9c02d87f37b289b257db2855fc35486f0229e8861e74b6c48366aac30caa9f WHIRLPOOL 5400f9a11f2997fde9ee7b170ccf6b8833ad0fdecf229fc2dcbb9eea731e40958922672b47fa539df533006b29f7a197473cb3b24b8bac51a4159fc9f249ec46
-DIST elementary-1.8.4.tar.bz2 12125663 SHA256 b3597896cd977387172e300c3df43404b6bf48c423610416b350043d4c270cb5 SHA512 c87612b38d9c123bf378e2e2b47cfb6636e4ed71ad5660bda97d9decbc6c0505de0a0e28b123908fbd9252be3b5c51c8fd44fdbd4268cef70d872b7a880a995f WHIRLPOOL 5dd53b1c4d810ee657324d8988c8aef8f5d24ee55f3ac8433e0d21e651a52ccf840c9612ce4e0991e7ca01a0e43302d9f525f0b5c6b14701e86194810a983005
-DIST elementary-1.8.5.tar.bz2 12134869 SHA256 427d0d3619a410d924ea44856ea9ddd7ce01e827be16f113627cef226eefa73f SHA512 94d32b4a2311c54fcc4549e82f825f61fe0ce63cfba8f3bdc3c02b263ed4bb622c3e119b8bb657fdd73a154ace5cceabf6f748ca561c0063271083a144729c98 WHIRLPOOL efe6bf99f1216c1ec426326490f4c751416e96d5941913e84666ca28d57a9bcada28775edc03532ce92cc18a39f5fd58deb2df202a781575eb39215a8b8393be
-DIST elementary-1.9.4.tar.bz2 12193234 SHA256 88b498832ce0bc0c24a00bd48954dcc90e1945c4ad1d830f889dd848c83a6b38 SHA512 21c25419960fdbbf428ddf961bda8f7ac96f91f7a8de3855702c1a7f641bf4b8dcec72969875e655b778e10129d56114b4b8624382ae6800f1f0966e2d0de82c WHIRLPOOL 8b9fe2b0ad65a862f3c436d0e9252d86167b7b89d1960af7726350885658772ac43c28e09f31693668b12a87c87f30ca25683738fd0953a165b857028eb0ffc8
-DIST elementary-1.9.5.tar.bz2 12192433 SHA256 65489ba954d5ba173924ba19aec99a750c2240db6268b454440a8f7e546d976b SHA512 ad9b61c407448a68a125ab8fa03377cc49ae15d7a10873e4343d2b18426414d655deb346ce7d2dfd23dce8f69b9615a2f8f39f2939a4ea15904ce5ac9880b7e2 WHIRLPOOL f44adce43180fea603f1b1c54380e4c206556938a60c8e68df4e533c689fca092b612363137c1c84ad239e751ece1ef091cc85875aa1b2a0b6bc08dce2605871
-EBUILD elementary-1.10.1.ebuild 1422 SHA256 2c3a61a54b3c22eed19b9b45cdacb1153d24ac1e9f4c64b1b817568077ead043 SHA512 5cbfc6fd055a6bb20dd5e3d56e5db83fbcba26ddba03b3c777c6ff1cb6ab83711bbe4bbd2f194e568678291948030da07442e25aaa0a7a95df9dcb5ce9ee0a4d WHIRLPOOL 11f411e3d0dd35b2931e27c61a8c4c77c14f732b0093b3d7101070a192e24f858320a05c012cc2b03beda8ce6c1bf66b7f9ba2f8a1cacb94f1824a1a6b227ab3
-EBUILD elementary-1.11.2.ebuild 1420 SHA256 3bbc73b4b820b55cffafcdef21145f98dd495caf142fb6447b730d3dfd102f2c SHA512 e83fdc3f1588b4a9d4e711b417ab05768a203a42c4db7787bf284215acaebd8afc009728f8f97d2333864290916175511739d89e4720983a121aaea322fd2c30 WHIRLPOOL c36b560ccad9f8938cc27dc8a05cc322c6f6f69740676959a809aaf8a0098bc57ec1e0324dc53a815da9f28d48009f5792d12d7bd9b71f71db71cc938521c95a
 EBUILD elementary-1.12.2.ebuild 1398 SHA256 7fcbebccb111c5a8e2d14784eb216c7bbb86a7e23a47d3627ec1830bd03cc082 SHA512 fcbeda4e3a7824bcfb718acfd58f32c5537b5b04903c9d43da0d43c43a0b36c3ffa11572084613d5d9229b5914ad1b79c52288408969d9acdeb019933346e0c4 WHIRLPOOL 425fda230b86a297603d4ec00b6c10a12080c756eec074ce5da8ca2b14311e05d8abc16a0fec9f1c55f31d1ee2772461895fcb1f7bad8bc5b5cc5a2788d3b54d
 EBUILD elementary-1.13.1.ebuild 1404 SHA256 c0df0fedff3b01770e34e898765a96010df72dc68e847ebbc386f1e677141102 SHA512 9ec848f33cd0a31b331ecf9f44c14edc7688bdb2407191570b97da1370afe0ea76ae1f841d546c58245dc2ce25bac8bbd630074d7e8a0b7f08d2eda3cde77ef0 WHIRLPOOL 233eb2d2d1cd5ba5aab9ba3d319fb06b044466263d4488566e723f7387bfaf5ce1b2ba6269e8aab87016c5db99b9cc45164f170e5d96e49af5c38238edfb0173
-EBUILD elementary-1.8.4.ebuild 1325 SHA256 26dd0dd068a66d21a7a7bc2341970efdcd7d4d1fc19e74d7e467c2cd5e062249 SHA512 e85ae432a3fc20c6b3041b688fd11a565c39cefd6d0dba0c98724a0fdc3f9db9ec4d553df44dac5f56603358ffb3af73a79cc33e041ec693ce95944494d816d7 WHIRLPOOL 4951e89b24e3a768aa0e0bdac7b97c219b3aa28d72573c1b1e39f6d32e33090750a33131b12d8d18593ff206ab1b0bf36ee5ff24457768f636fdc68e8e710155
-EBUILD elementary-1.8.5.ebuild 1325 SHA256 4f6daf369ba75c3baa34bd471ae744a980cd4545a11ab67377aca5968c0df744 SHA512 5ef21c4c2f7509e06acf13583a948f92465c1e8b7b23a448fb06c78b16852e95a174eff86c982f3f5618153da320dd467ac2b161c57c7c4f169dbd16ffac3d34 WHIRLPOOL 4cf19b8e985c6595c1bfc96fa1283b8e309bfa7216b03f4d94ab965984e727b6dc9f37f6402bd8e4ccb00f3d9411c0306b3be9a1155d34b85166b57e65a48160
-EBUILD elementary-1.9.4.ebuild 1421 SHA256 f6e8069fa4428201c0334bcaac0cc8bad638356eb581dc0df1747ce862bff5a9 SHA512 7f214921c8cf3932a521f9b5ba75da113d8af9c09349c88a37f34e5feb79a44d72fbf8b81973fc8950bc58b4971770dfcc80619a4c3430d979131d0fe155279d WHIRLPOOL a7b112de0c4d2d02f82a033a293d082babce37f00bd3b91d0943028caaf0770635a1a8f43d888b2438547fcc6fd49f0fb98b2b42a7e1c43d3c3d29dcbe4b596e
-EBUILD elementary-1.9.5.ebuild 1421 SHA256 9abe45830f0055209944bdad4f3ef57da4f9b8c6d76d3398de39fcfce6f7adb1 SHA512 e2d727b5abe992f89fc0fcd7aee28e579071df7cd067684f0860b00d46ded96cd40b46b9e25dde6c10ae7abd33818101674b2facd41cb774862fdd01ca9a6fb7 WHIRLPOOL de2f3b6170f69b4d40eb7324a0f35915dd925b7454f7309bc32b3e6c158f95bfb42539bf8a49bebab4917ee12abadb2093564cc3a07e18787bde2287ecbfe76e
 EBUILD elementary-9999.ebuild 1374 SHA256 a4e3f63a6a81eb761b73711cdc6fac2acd2ad33296fc62f92473636d53e71e78 SHA512 a68f0c1a06c040db2b157f1f8d466374a0928d4f3b6d7d55bc7ceb2597c8ac807b7fb861b4293d137fd9f7334a462717148f1166852a5ab36de2d35b9b7cdda8 WHIRLPOOL 032ac545fc498ab47539ef7d28366100d91a688579920030f5c7fc253d493c47fe85975fa8cdfad2d2ddd422ffb9290e8f1c7509088082f8e4025f51b48b22ec
-MISC ChangeLog 4787 SHA256 ae0e345a8aa25d186c527a0adddb80eb65d43a9df9a63965fbf2153f62947b31 SHA512 d0f9f7b8c9b1c668f95038071014c180c38dfaf3422aaa28d7c5186351b5dec7eb8e6f26408d8630eeadbce6b15ebb0ccd89bc1c8d205536648b03f895635de4 WHIRLPOOL 0570f3d0bf46ab0d70862833edd414c63b91e4a7d7a94ed662a8131baf9c3ecf4b58f633b1c4d40b2610c2e4c88bd81529e0f4004350b99b99440e3494ef23ad
+MISC ChangeLog 5047 SHA256 bb1849293f47290eced9090c4f96cca2fc54ee351e5845e84807e046202d6366 SHA512 9735e2dd4b4da29b12807c85da679226131743068d99fbba845a54af95595622fb5bea66ee67fa09b9264482e6562c86e0c4ef1f84e9a1e6f08ffefcd8015901 WHIRLPOOL cc9f9a32bc9d0055f5b18cc8a1146b1ca235eb693e7b9caaf088f96acb53c6eb749fd6351818b15aba5556193702a93fed4e6eea700258ebb904b6065f637a5e
 MISC metadata.xml 876 SHA256 884690747ca274e74d7d8b2c4d155e1c0525dea3e53f6782194d184cced06d3c SHA512 e3ca4c7611b3f765d7d9a04a2209552a20e45d5c276295cf5f75aa6517e7d912d5a2519114e892555bdffb44e3dc683e9a9698224cca826135674b3f3acc0038 WHIRLPOOL 3f9ddc6f18de311940b4c7bb56bff7e01d15ccc2f34a8f2f3c686e140db0983e560c07944d2b7666a9d304f05375778cb786e1b1490f6974bb60a3e6ca8f34df
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVM3ubAAoJELp701BxlEWf3UMQAIKO1b0hDxVkULClGTHkl6+3
-dJEiLrpJbiC1b8GQdHY1jQmmIa2mCd9enD4AGA60Hl9ADpqZ+ZWTXxm92iEKr7tF
-kLGGPyBnIEhE9vMonSJ1Z2xfwCPlSlD5TfgYgFbPTWhHkRRKESDCLgn9HPl1BxRg
-c+0fdKs4eInUd+kX8ZVLpZqgI32NSmDBru6v2ePTmBzBeRBudZ5sCKrMP+eEgZOS
-Jhak34NjnpbqcfUkFEdaDs1bhVEEwJ8Le64raKvkJvSIR94tiQFYrbIKcTQj8o9M
-yT9wLc638Wz5KHvLi/AnZlRLMx9ypprORQiaiUBsKnAUzxBu7mAscAEQhOsMKhx2
-ITxEixqxZeH6nDDqax/g52yiCuvGj3LbT5m11T89Zmkbch7rAB/TBwo3LHqGss0A
-dCZnKXP+RXS44WrXpAiXfJr3+2sc/QGySD5X5E9NLl+++0NKRsXPqfx1PqElcj8G
-vOVae0OfOPQqQh/RxErD8oGN4v+611ZWdv7/oKCAgytQWSFwnujn7UZ3PXAtvE0x
-r0i+LAELzIHiBs4vf+z16NtFKsc38QaggJes7Ed1b23vizvq6uCilN0n4dB7HX+z
-pnII5RWcrnUN8Rth/3SZjJ9kgxq3wBTAMALJKG6H/a7gBG3iIZEXXgeQCkELkDim
-bUkfNACEf1H80d90v6im
-=NpBZ
+iQIcBAEBCAAGBQJVwtxwAAoJEPGu1DbS6WIAZ4kQAIfOshjGyfZlbIfqbqE2r+db
+kbDdE5fxb9fWI7a0lwRhUpoe9K0KB/N9Ei8XyQf8541rEYaEq6yZtzkxUwSIRvLi
++KQLkK5XgqYOs0yiOrQlV+m6MUoWccfkGq0xn2HwYbRFf5aF5t9MAv2r9tvINp2T
+oAYNYwD2dMq0kR/Zic5nLzM3BRYt6ssMR1JonrN/ixn0rp5imcR8LJRNl0STpSVu
+BRm1eOFp5oYkB0izYlhPRwVMs4ZTojSnCLeqTTi/GxX39I0GBBRTi6C7TR4RALmt
+BMv7vKiV1h+SjY9KfmNzZ4u4WIfUbsGinHKsdFrSfguitBHeREWExjZWE8nIXFNZ
+3Ibub07a5HqQEIF+CnAekQL+3oOgwAsiFkK5Lvgmj92fbzGDYQ9lCn9zAVir58wc
+mDeNKayV4+Kjrv7lwA9gyTN7sbd59nAEGuXPFC36mjl85KSPZdgPvydwUr8S/xDl
+0bNOPQL5j3nA80DuxWJhVhRG8yxNktPrNq/n4WNasNbDoDTzSVtP1Hkfr1EsD1V2
+uXyi/Dy1/J1Yf4InG04fN+vQBQH8KNNbooJVSRFtYCYqXUnjYUHdkixPVExkWwUZ
+XTgAwin3jJI0bMnC6i3lpDj8rOYbUalNNfcKmcmYuXdofZHE+xBtlF7Gf7ADgliH
+iNs8njHWaz5vN7mtAAVQ
+=oJCA
 -----END PGP SIGNATURE-----
